2006-06-07  Roman Schindlauer  <roman@kr.tuwien.ac.at>

	* include/dlvhex/AtomSet.h: New function matchAtom().
	* src/dlvhex/AtomSet.cpp: Likewise.

	* include/dlvhex/Component.h: Prepared input set filtering for
	components.
	* src/dlvhex/Component.cpp (modelGenerator), (evaluate): Likewise.

	* include/dlvhex/NamesTable.h: Corrected error in namespace handling.

	* src/dlvhex/GuessCheckModelGenerator.cpp (compute): Corrected wrong
	behaviour.

	* src/dlvhex/Makefile.am: Removed static linking.

	* src/dlvhex/Term.cpp: Corrected bug in getUnquotedStrings().

	Fixes bug: #25


2006-06-06  Roman Schindlauer  <roman@kr.tuwien.ac.at>

	* include/dlvhex/NamesTable.h: Added compare method for name-iterator.

	* include/dlvhex/Term.h: Return const string& instead of string.

	* src/dlvhex/Atom.cpp: Accelerated Atom< ().

	* src/dlvhex/Term.cpp: Accelerated Term!= () by comparing
	term-name-iterators instead of term-strings.


2006-06-05  Roman Schindlauer  <roman@kr.tuwien.ac.at>

	* src/dlvhex/dlvhex.cpp (insertNamespaces), (removeNamespaces),
	(main): Adapted namespace handling to new namestable - strings are now
	stored with their quotes.

	* src/dlvhex/helper.cpp (stringExplode): Do not create a vector
	element if string to explode is empty. This allows for an empty filter
	string to have no effect.


2006-06-04  Roman Schindlauer  <roman@kr.tuwien.ac.at>

	* include/dlvhex/NamesTable.h: Added lookup table to speed up
	name-retrieval.

	* src/dlvhex/Atom.cpp: Improved speed of operator<.

	* src/dlvhex/DLVresultParser.ypp: Removed debug switches.

	* src/dlvhex/Term.cpp (Term): Simplified handling of quoted strings.


2006-05-31  Roman Schindlauer  <roman@kr.tuwien.ac.at>

	* include/dlvhex/Atom.h: Modified the BuiltinPredicate to be closer to
	the parent class Atom.
	* src/dlvhex/Atom.cpp (BuiltinPredicate): Likewise.

	* include/dlvhex/ResultContainer.h: Added workaround to remove DLT
	auxiliary atoms from result.